--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@
 #azure.activedirectory.tenant-id=b71e53a6-4991-49d6-b78e-6c4d551ec5f5
 #azure.activedirectory.active-directory-groups=hhs-boodschapp
 
-spring.datasource.url=jdbc:mysql://tengjuchi.nl:3306/database87943?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://tengjuchi.nl:3306/admin_boodschapp?useSSL=false&serverTimezone=UTC
 spring.datasource.username=database87943
 spring.datasource.password=07b#syY9
 spring.jpa.hibernate.ddl-auto=create
