--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,18 @@
 #spring.security.oauth2.client.registration.azure.client-id=283b92f1-5339-4b12-94b3-8ca6722a8163
 #spring.security.oauth2.client.registration.azure.client-secret=r74Q-s-VDVEFrBZhUN0yNDamo/3Clez?
-
+#
 #azure.activedirectory.tenant-id=b71e53a6-4991-49d6-b78e-6c4d551ec5f5
 #azure.activedirectory.active-directory-groups=hhs-boodschapp
-
+#
 spring.datasource.url=jdbc:mysql://tengjuchi.nl:3306/admin_boodschapp?useSSL=false&serverTimezone=UTC
 spring.datasource.username=database87943
 spring.datasource.password=07b#syY9
 spring.jpa.hibernate.ddl-auto=create
 
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/admin_boodschapp?useSSL=false&serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=adminadmin
+#spring.jpa.hibernate.ddl-auto=create
 
 #remotemysql.com
