--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-#spring.security.oauth2.client.registration.azure.client-id=283b92f1-5339-4b12-94b3-8ca6722a8163
-#spring.security.oauth2.client.registration.azure.client-secret=r74Q-s-VDVEFrBZhUN0yNDamo/3Clez?
-#
-#azure.activedirectory.tenant-id=b71e53a6-4991-49d6-b78e-6c4d551ec5f5
-#azure.activedirectory.active-directory-groups=myown
+spring.security.oauth2.client.registration.azure.client-id=283b92f1-5339-4b12-94b3-8ca6722a8163
+spring.security.oauth2.client.registration.azure.client-secret=r74Q-s-VDVEFrBZhUN0yNDamo/3Clez?
+
+azure.activedirectory.tenant-id=b71e53a6-4991-49d6-b78e-6c4d551ec5f5
+azure.activedirectory.active-directory-groups=myown
 
 spring.datasource.url=jdbc:mysql://tengjuchi.nl:3306/admin_boodschapp?useSSL=false&serverTimezone=UTC
 spring.datasource.username=database87943
